<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>
    <string name="title">Java Ordering App </string>
    <string name="quantity">Quantity</string>
    <string name="add_btn">+</string>
    <string name="firstValue">1</string>
    <string name="subt_btn "> - </string>
    <string name="price">price</string>
    <string name="secondValue">10</string>
    <string name="order_btn">order</string>
    
</resources>
