<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.justjava.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/title"
        android:textAllCaps="true"
        android:textSize="20sp" />
    
    <TextView        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity" 
        />
    
<LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    
    <Button 
        android:id="@+id/substraction_text_view"
        android:layout_width="48dp"
        android:layout_height="48dp" 
        android:layout_marginBottom="16dp"
        android:text="-"
        android:onClick="decrement"
        />
    
     <TextView
        android:id="@+id/quantity_text_view"
		android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/firstValue"
        android:textSize="16sp"   
        />
     
     
     
     <Button 
        android:id="@+id/addition_text_view"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/add_btn"
        android:layout_marginBottom="16dp"
        android:onClick="increment"
        />
</LinearLayout>
     
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        android:textAllCaps="true"
        android:text="@string/price" 
        />
     
     <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/secondValue"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        />
     
     <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_btn"
        android:onClick="submitOrder"
        android:textStyle="italic"
        />
    
</LinearLayout>
